Fri Dec 20 19:35:37 2002  WATANABE Hirofumi  <eban@ruby-lang.org>

	* ext/extmk.rb.in: get rid of --no-undefined option in $DLDFLAGS.

Wed Dec 18 17:53:05 2002  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* class.c (rb_include_module): argument should be T_MODULE, not
	  T_class, nor T_ICLASS.

Mon Dec 16 16:35:28 2002  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* stable version 1.6.8 release candidate.

Mon Dec 16 15:53:20 2002  Nobuyoshi Nakada  <nobu.nokada@softhome.net>

	* parse.y (nextc): get rid of overrun.  (pointed out by akr
	  [ruby-list:36773])

	* eval.c (rb_eval): untangled ruby_dyna_vars.  [ruby-talk:59035]

Mon Dec 16 08:03:47 2002  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* dir.c (dir_set_pos): Dir#pos= should return the new position.

Sat Dec 14 02:03:51 2002  WATANABE Hirofumi  <eban@ruby-lang.org>

	* ext/dbm/extconf.rb (db_check): support for GNU dbm 1.8.3.
	  backported from 1.7.

Fri Dec 13 23:39:09 2002  WATANABE Hirofumi  <eban@ruby-lang.org>

	* ext/dbm/extconf.rb: backported from 1.7.

	* ext/dbm/dbm.c: ditto.

Fri Dec 13 17:15:49 2002  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* variable.c (generic_ivar_get): should always warn for
	  uninitialized instance variables.

Thu Dec 12 16:26:31 2002  Nobuyoshi Nakada  <nobu.nokada@softhome.net>

	* marshal.c (r_object0): singleton class instance can't be loaded.
	  (ruby-bugs-ja:PR#366)

Thu Dec 12 03:05:16 2002  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* sprintf.c (rb_f_sprintf): 1.7 sprintf() backported.

Wed Dec 11 23:35:43 2002  WATANABE Hirofumi  <eban@ruby-lang.org>

	* ext/extmk.rb.in (create_makefile): -no-undefined -> --no-undefined.

Wed Dec 11 20:48:03 2002  Akinori MUSHA  <knu@iDaemons.org>

	* lib/getoptlong.rb (GetoptLong::Error): provide a common ancestor
	  for GetoptLong error classes (RCR#129).

Fri Dec  6 14:13:59 2002  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* numeric.c (num_cmp): define Numeric#<=>, remove Numeric#==.
